--- a/filegroup_and_database.ipynb
+++ b/filegroup_and_database.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "columns:  ['simple', 'bitpix', 'naxis', 'naxis1', 'naxis2', 'extend', 'bzero', 'bscale', 'head', 'acqmode', 'readmode', 'imgrect', 'hbin', 'vbin', 'subrect', 'datatype', 'xtype', 'xunit', 'raywave', 'calbwvnm', 'trigger', 'calib', 'dllver', 'exposure', 'temp', 'readtime', 'operatn', 'gain', 'emrealgn', 'vclkamp', 'vshift', 'outptamp', 'preamp', 'serno', 'unsttemp', 'blclamp', 'precan', 'flipx', 'flipy', 'cntcvtmd', 'cntcvt', 'dtnwlgth', 'sntvty', 'spsnfltr', 'thrshld', 'pcntenld', 'nsethsld', 'ptnthld1', 'ptnthld2', 'ptnthld3', 'ptnthld4', 'avgftrmd', 'avgfctr', 'frmcnt', 'portmode', 'lsheight', 'lsspeed', 'lsaltdir', 'lsctrl', 'lsdir', 'fksmode', 'fktmode', 'usertxt1', 'usertxt2', 'usertxt3', 'usertxt4', 'date', 'frame', 'eshtmode', 'preampgaintext', 'spectrographserial', 'shamrockisactive', 'spectrographname', 'spectrographisactive', 'irigdataavailable', 'irigdata', 'detector', 'exptime', 'camgain', 'date_obs', 'ra', 'dec', 'epoch', 'airmass', 'jd', 'st', 'ha', 'image', 'telescop', 'platescl', 'instrume', 'object', 'observer', 'rdnoise', 'lamina', 'lam_pos', 'filter', 'fil_pos', 'focusval', 'w_bar', 'w_temp', 'w_hum']\n",
+      "files: 427\n"
+     ]
+    }
+   ],
    "source": [
     "print('columns: ', db.column_names('files'))\n",
     "print('files:', len(db['files']))"
@@ -81,9 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2458514.73231', '2458514.73240', '2458514.73250', '2458514.73259', '2458514.73268', '2458514.73277', '2458514.73286', '2458514.73295', '2458514.73304', '2458514.73313']\n",
+      "SQLRow 34 in table 'files' {'simple': 1, 'bitpix': 16, 'naxis': 2, 'naxis1': 1024, 'naxis2': 1024, 'extend': 1, 'bzero': 32768, 'bscale': 1, 'head': '', 'acqmode': 'Single', 'readmode': 'Image', 'imgrect': '1, 1024,1024, 1', 'hbin': '1', 'vbin': '1', 'subrect': '1, 1024,1024,1', 'datatype': 'Counts', 'xtype': 'Pixel number', 'xunit': 0, 'raywave': 0.0, 'calbwvnm': 0, 'trigger': 'Internal', 'calib': '0.,1.,0.,0.', 'dllver': '2.100.30039.0', 'exposure': '0,00001', 'temp': '-74,1', 'readtime': 1e-06, 'operatn': 4, 'gain': '1.5', 'emrealgn': 0, 'vclkamp': 0, 'vshift': '12.9E-06', 'outptamp': 'Conventional', 'preamp': '2.5x', 'serno': '4335', 'unsttemp': '-999', 'blclamp': 0, 'precan': 0, 'flipx': 0, 'flipy': 0, 'cntcvtmd': 0, 'cntcvt': 0, 'dtnwlgth': 500.0, 'sntvty': 0.0, 'spsnfltr': 0, 'thrshld': 0.0, 'pcntenld': 0, 'nsethsld': 0, 'ptnthld1': 0.0, 'ptnthld2': 0.0, 'ptnthld3': 0.0, 'ptnthld4': 2.802597e-45, 'avgftrmd': 0, 'avgfctr': 1, 'frmcnt': 1, 'portmode': -1, 'lsheight': 0, 'lsspeed': 0.0, 'lsaltdir': 0, 'lsctrl': 0, 'lsdir': 0, 'fksmode': 0, 'fktmode': 0, 'usertxt1': '', 'usertxt2': '', 'usertxt3': '', 'usertxt4': '', 'date': '2019-01-30T21:54:19', 'frame': '2019-01-30T21:54:19.228', 'eshtmode': 0, 'preampgaintext': '', 'spectrographserial': '', 'shamrockisactive': 0, 'spectrographname': '', 'spectrographisactive': 0, 'irigdataavailable': 0, 'irigdata': '', 'detector': '', 'exptime': '0,00001', 'camgain': '2.5x', 'date_obs': '2019-01-30T21:54:19.228', 'ra': '03:06:33', 'dec': '-06:05:19', 'epoch': '2000.0', 'airmass': '1.000', 'jd': '2458514.41270', 'st': '03:31:18', 'ha': '00:00:12', 'image': 'BIAS_0018', 'telescop': '0.60m(BC)', 'platescl': '0.34', 'instrume': 'Ikon 19002', 'object': 'BIAS', 'observer': 'Julio Cesar Neves Campagnolo', 'rdnoise': '6.3', 'lamina': 'L1', 'lam_pos': '1', 'filter': 'F1', 'fil_pos': '1', 'focusval': '2256', 'w_bar': '757,9', 'w_temp': '20,1', 'w_hum': '67'}\n",
+      "['L0', 'L1', 'L2', 'L3', 'L4', 'L5', 'L6', 'L7', 'L8', 'L9']\n",
+      "L0\n",
+      "['L0', 'L1', 'L2', 'L3', 'L4', 'L5', 'L6', 'L7', 'L8', 'L9']\n"
+     ]
+    }
+   ],
    "source": [
     "print(db['files', 'jd'][0:10])\n",
     "print(db['files'][34])\n",
@@ -121,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,11 +349,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = FitsFileGroup_Table(files=files)\n",
+    "f = FitsFileGroup_Table(files=files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
     "print(len(f.filtered({'object': 'HD126593'}).summary))"
    ]
   },
@@ -340,12 +377,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SQL implementation"
+    "## SQL implementation\n",
+    "\n",
+    "*Temporary implementation, for full implementation, look to astropop*\n",
+    "\n",
+    "The SQL backend is working as expected and has almost the same performance as table implementation. However, has the advantage of persistent data.\n",
+    "\n",
+    "Filtering seems to work faster too, specially for very large datasets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,12 +472,28 @@
     "    def summary(self):\n",
     "        return self._db[_headers].as_table()\n",
     "\n",
-    "    def __copy__(self, files=None, db=None):\n",
-    "        raise NotImplementedError\n",
+    "    def __copy__(self):\n",
+    "        db = self._db.copy()\n",
+    "        nfg = object.__new__(FitsFileGroup_SQL)\n",
+    "        nfg._db = db\n",
+    "        nfg._db_dir = None\n",
+    "        nfg._read_db(None, None, None, False)\n",
+    "        return nfg\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self._db[_headers])\n",
     "\n",
     "    def filtered(self, keywords):\n",
     "        \"\"\"Create a new FileGroup with only filtered files.\"\"\"\n",
-    "        raise NotImplementedError\n",
+    "        db = SQLDatabase(':memory:')\n",
+    "        db.add_table(_metadata, data=self._db[_metadata].as_table())\n",
+    "        db.add_table(_headers, columns=self._db.column_names(_headers))\n",
+    "        data = self._db.select(_headers, where=keywords)\n",
+    "        for i in data:\n",
+    "            db.add_row(_headers, dict(zip(self._db.column_names(_headers), i)))\n",
+    "        nfg = self.__copy__()\n",
+    "        nfg._db = db\n",
+    "        return nfg\n",
     "    \n",
     "    def update(self, files=None, location=None, compression=False):\n",
     "        \"\"\"Update the database with the current files.\"\"\"\n",
@@ -507,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,19 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "fg.summary"
+    "print(len(fg.filtered({'object': 'HD126593'}).summary))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
